--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,25 @@
-/Users/lonstein/.tmux.conf
+unbind C-b
+set -g prefix C-z
+
+# toggle last like screen
+bind-key C-z last-window
+bind-key C-c new-window
+
+set -g status-right "%y-%m-%d %H:%M:%S"
+set -g status-interval 1
+
+set -g display-time 3000
+set -g history-limit 5000
+set -g bell-action any
+set -g visual-activity on
+set -g visual-bell on
+
+set -g status-bg blue
+
+set-window-option -g automatic-rename on
+set-window-option -g window-status-current-fg green
+set-window-option -g alternate-screen on
+set -g set-titles on
+set-window-option -g clock-mode-style 24
+
+set -g default-terminal "screen-256color"
