--- a/.rcrc
+++ b/.rcrc
@@ -1,1 +1,11 @@
-/Users/lonstein/.rcrc
+#
+# RC, unix port of Plan9 shell, config
+#
+
+SHELL_ROOT=$HOME/shell.rc/rc
+
+. $SHELL_ROOT/environment
+. $SHELL_ROOT/generic_functions
+. $SHELL_ROOT/local_conveniences
+. $SHELL_ROOT/private
+
