more tmux twiddling

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,11 +5,13 @@ set -g prefix C-z
 bind-key C-z last-window
 bind-key C-c new-window
 
+bind-key C-k send-keys -R \; clear-history
+
 set -g status-right "%y-%m-%d %H:%M:%S"
 set -g status-interval 1
 
 set -g display-time 3000
-set -g history-limit 5000
+set -g history-limit 10000
 set -g bell-action any
 set -g visual-activity on
 set -g visual-bell on
@@ -19,7 +21,18 @@ set -g status-bg blue
 set-window-option -g automatic-rename on
 set-window-option -g window-status-current-fg green
 set-window-option -g alternate-screen on
+set-window-option -g xterm-keys on
+
 set -g set-titles on
+set -g set-titles-string "tmux: #T"
+
 set-window-option -g clock-mode-style 24
 
+# renumber windows sequentially after closing
+set -g renumber-windows on
+
+# force terminal and 24-bit color mode
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ',xterm*:Tc'
+
+
